* Removed a gap and fixed invalid xhtml (PersonalMessage template, index.css) [Bug 3903]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9237 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -430,6 +430,11 @@ tr.titlebg th.smalltext, thead tr.titlebg th a:link, thead tr.titlebg th a:visit
 	padding: 0 0 0.2em 0;
 	overflow: hidden;
 }
+div.pagesection div.floatright input
+{
+	margin-top: 3px;
+}
+
 .pagelinks
 {
 	padding:  0.6em 0 0.4em 0;
